# image-processing-vsu

./: .gitignore  README.md  pyproject.toml  requirements.txt
image_processing_1/tests/: conftest.py  test_false_colors.py  test_filtering.py  test_resize.py
image_processing_2/assignments/01_pandas/: pandas_task.ipynb
image_processing_2/assignments/02_nn_numpy/: 02_nn_numpy.ipynb  nn_numpy_funcs.py
image_processing_2/assignments/03_cnn_multiclass/: 03_cnn_multiclass.ipynb
image_processing_2/in_class/: 01_lin_regression.ipynb  02_logistic.ipynb  03_classification_example.ipynb  04_rf_implementation.ipynb  05_clustering.ipynb  06_pytorch_tutorial.ipynb  07_pytorch_classification.ipynb  rl_demo.ipynb
image_processing_2/tests/: test_nn_numpy.py
in-class/: compression.ipynb
resources/: README.md
