[tool.poetry]
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
numpy = "^2.0.0"
matplotlib = "*"
scipy = "^1.15.1"
scikit-image = "^0.25.1"
pytest = "*"
pandas = "^2.3.1"
scikit-learn = "^1.7.1"
torch = "^2.8.0"
torchvision = "^0.23.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
ruff = "*"
pre-commit = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
# exclude checked folders and files
exclude = ["*.ipynb", ".venv"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "N",  # PEP8 naming convetions
    "D"  # pydocstyle
    ]
ignore = [
    "C901", # too complex
    "N812", # lowercase-imported-as-non-lowercase
    "D100", # undocumented-public-module
    "N806", # Variable in function should be lowercase
    "N803", # Argument name `W` should be lowercase
]

